--- a/Quantitative_Image_Analysis_of_Biosolids_Evaluating_morphological_parameters_versus_visual_features.ipynb
+++ b/Quantitative_Image_Analysis_of_Biosolids_Evaluating_morphological_parameters_versus_visual_features.ipynb
@@ -642,6 +642,14 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Here I have chosen 6 clusters just to speed up the procedure and keep it simple. In the paper we ended up with 10 and 15 clusters respectively which was determined by evaluating the number of clusters in a supervised fashion. \n",
+        "Alternatively another technique such as hierarchical clustering can be used which does not require a predetermined number of clusters."
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": 13,
       "metadata": {
@@ -1005,11 +1013,18 @@
     },
     "gpuClass": "standard",
     "kernelspec": {
-      "display_name": "Python 3",
+      "display_name": "Python 3.9.6 64-bit",
+      "language": "python",
       "name": "python3"
     },
     "language_info": {
-      "name": "python"
+      "name": "python",
+      "version": "3.9.6"
+    },
+    "vscode": {
+      "interpreter": {
+        "hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"
+      }
     }
   },
   "nbformat": 4,
